# SVM

./: LICENSE  Support-Vector-Machine-Solver.cabal  main.hs  values.txt
