name:                Support-Vector-Machine-Solver
version:             0.1.0.0
license-file:        LICENSE
author:              Rickard Fridvall
maintainer:          partim@live.com
build-type:          Simple

-- extra-source-files:  

cabal-version:       >=1.10


executable main
  main-is: main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:       

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    

  ghc-options: -fno-warn-tabs -fno-ignore-asserts

  build-depends: unordered-containers == 0.2.5.1, QuickCheck == 2.8.1, repa == 3.4.0.1, split == 0.2.2, base >=4.8 && <4.9

  -- Directories containing source files.
  -- hs-source-dirs:      

  -- Base language which the package is written in.
  default-language: Haskell2010

